src/network_policies/test1default-fluidos-consumer-1eb36f4bab782063dd96399b68643500b8a9d14efaf96e5f99526059d91983f2f4eba2 Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1default-fluidos-consumer-1eb36f4bab782063dd96399b68643500b8a9d14efaf96e5f99526059d91983f2f4eba2
  namespace: default-fluidos-consumer-1eb36f
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default-fluidos-consumer-1eb36f
      podSelector:
        matchLabels:
          app: product-catalogue
